# jackal

jackal_control/config/: control.yaml  twist_mux.yaml
jackal_control/launch/: control.launch  control.launch.save
jackal_description/urdf/: jackal.urdf.xacro
jackal_msgs/: CMakeLists.txt
jackal_msgs/msg/: ERL.msg  ERL2.msg  PWMControl.msg  TrajectoryState.msg
